# c4a0

./: .gitignore  LICENSE.md  README.md  UPGRADE_LOG.md  architecture.md  claude-upgrade-progress.json  mise.toml  pyproject.toml
.github/workflows/: ci.yaml
autoresearch-notes/: iteration-026-scalable-benchmark-tiers.md  iteration-027-dev-tier-baseline.md  iteration-028-replay-buffer-v1.md  iteration-029-replay-window-5-dev.md  iteration-030-eval-temperature-control.md  iteration-031-greedy-eval-temperature-dev.md  iteration-032-fixed-eval-openings.md  iteration-033-opening-depth-6-dev.md  iteration-034-default-fixed-openings.md  iteration-035-run-seed-plumbing.md  iteration-036-current-default-dev-baseline.md  iteration-037-dev-train-gens-10.md  iteration-038-solver-eval-champion-selection.md  iteration-039-gens10-with-selection.md  iteration-040-default-champion-selection.md  iteration-041-loss-weight-config.md  iteration-042-policy-loss-weight-2-dev.md  iteration-043-default-policy-weight-2.md  iteration-044-low-value-weight-dev.md  iteration-045-default-low-value-weight.md  iteration-046-dev-train-gens-2.md  iteration-047-dev-default-gens-2.md  iteration-048-dev-train-games-1024.md  iteration-049-dev-default-games-1024.md  iteration-050-dev-train-mcts-256.md  iteration-051-dev-default-mcts-256.md  iteration-052-dev-train-mcts-512.md  iteration-053-dev-default-mcts-512.md  iteration-054-dev-train-games-2048.md  iteration-055-root-only-eval-scope.md  iteration-056-root-only-dev-baseline.md  iteration-057-root-only-train-games-2048.md  iteration-058-reuse-training-dir-eval.md  iteration-059-rescore-2048games-eval10000.md  iteration-060-rescore-1024games-eval10000.md  iteration-061-dev-default-games2048-eval10000.md  iteration-062-conv-filters-32-dev.md  iteration-063-default-conv-filters-32.md  iteration-064-residual-blocks-2-dev.md  iteration-065-learning-rate-1e-3-dev.md  (+3 more)
c4a0_rust/: Cargo.toml
c4a0_rust/src/: c4r.rs  lib.rs  mcts.rs
docs/: development.md  improvements.md
rust/: .gitignore  Cargo.toml
rust/proptest-regressions/: c4r.txt  mcts.txt  solver.txt
rust/src/: batching.rs  c4r.rs  data.rs  interactive_play.rs  lib.rs  main.rs  mcts.rs  nn.rs  nn_utils.rs  pybridge.rs  self_play.rs  solver.rs  training.rs  tui.rs  types.rs  utils.rs
scripts/: find-libclang.py  solver_alignment_eval.py
src/: c4.py  explore.ipynb  main.py  mcts.py  model_storage.py  nn.py  self_play.py  self_play_concurrent.py  tournament.py  training.py  utils.py
src/c4a0/: explore.ipynb  hparam_search.ipynb  main.py  mcts.py  nn.py  self_play.py  sweep.py  tournament.py  training.py  utils.py
src/c4a0_rust/: __init__.py  __init__.pyi
tests/: c4_test.py  conftest.py  mcts_test.py  nn_test.py  self_play_test.py  test_nn.py  test_utils.py  tournament_test.py
tests/c4a0/: c4_test.py  conftest.py  mcts_test.py  nn_test.py  self_play_test.py  tournament_test.py
tests/c4a0_tests/: c4_test.py  conftest.py  nn_test.py  pybridge_test.py  solver_alignment_eval_test.py  tournament_test.py  training_test.py  utils_test.py
