[project]
name = "c4a0"
version = "0.1.0"
description = ""
authors = [{ name = "Advait Shinde", email = "advait.shinde@gmail.com" }]
dependencies = [
  "pytorch-lightning>=2.5.0",
  "numpy>=2.2.3",
  "einops>=0.8.2",
  "torchmetrics>=1.6.2",
  "tensorboardx>=2.6.2.2",
  "tensorboard>=2.19.0",
  "tqdm>=4.67.1",
  "jupyterlab>=4.3.5",
  "pydantic>=2.10.6",
  "tabulate>=0.9.0",
  "matplotlib>=3.10.1",
  "maturin>=1.14.1",
  "loguru>=0.7.3",
  "typer>=0.15.2",
  "optuna>=4.2.1",
  "optuna-dashboard>=0.17.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["maturin>=1.14.1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
python-packages = ["c4a0", "c4a0_rust"]
module-name = "c4a0_rust._native"

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pyright>=1.1.411",
  "jupyterlab>=4.0.10",
  "pandas>=2.1.4",
  "rankit>=0.3.3",
  "ruff>=0.15.20",
]

[tool.pyright]
typeCheckingMode = "basic"
extraPaths = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  # Disable warnings we get form pytorch lightning that clutter pytest output
  "ignore:pkg_resources is deprecated.*:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace`.*:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
  "ignore:You are trying to `self.log()` but the `self.trainer` reference is not registered on the model yet.*",
]
