[project]
name = "c4a0"
version = "0.1.0"
description = ""
authors = [{ name = "Advait Shinde", email = "advait.shinde@gmail.com" }]
dependencies = [
  "pytorch-lightning>=2.6.5",
  "numpy>=2.4.6",
  "einops>=0.8.2",
  "torchmetrics>=1.9.0",
  "tensorboardx>=2.6.5",
  "tensorboard>=2.20.0",
  "tqdm>=4.68.3",
  "jupyterlab>=4.6.1",
  "pydantic>=2.13.4",
  "tabulate>=0.10.0",
  "matplotlib>=3.11.0",
  "maturin>=1.14.1",
  "loguru>=0.7.3",
  "typer>=0.26.8",
  "optuna>=4.9.0",
  "optuna-dashboard>=0.20.0",
  "torch>=2.12.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["maturin>=1.14.1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
python-packages = ["c4a0", "c4a0_rust"]
module-name = "c4a0_rust._native"

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pyright>=1.1.411",
  "jupyterlab>=4.6.1",
  "pandas>=2.1.4",
  "rankit>=0.3.3",
  "ruff>=0.15.20",
]

[tool.pyright]
typeCheckingMode = "basic"
extraPaths = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  # Disable warnings we get form pytorch lightning that clutter pytest output
  "ignore:pkg_resources is deprecated.*:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace`.*:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
  "ignore:You are trying to `self.log()` but the `self.trainer` reference is not registered on the model yet.*",
]
