[package]
name = "c4a0_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "c4a0_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
approx = "0.5.1"
more-asserts = "0.3.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"
rand = "0.8.5"
indicatif = "0.17.8"
