[package]
name = "c4a0_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "c4a0_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
approx = "0.5.1"
more-asserts = "0.3.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"
rand = "0.8.5"
indicatif = "0.17.8"
numpy = "0.21.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_cbor = "0.11.2"
ratatui = "0.27.0"
parking_lot = "0.12.3"
log = "0.4.22"
env_logger = "0.11.5"
rocksdb = "0.22.0"

[dev-dependencies]
proptest = "1.5.0"
