[package]
name = "c4a0_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "c4a0_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
approx = "0.5.1"
more-asserts = "0.3.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
rand = "0.10.1"
indicatif = "0.18.5"
numpy = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
ratatui = "0.30.2"
parking_lot = "0.12.5"
log = "0.4.33"
env_logger = "0.11.11"
rocksdb = "0.22.0"

[dev-dependencies]
proptest = "1.11.0"
